--- a/package.json
+++ b/package.json
@@ -15,19 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
-    "excel4node": "^1.8.2",
-    "exceljs": "^4.4.0",
     "express": "^4.18.2",
-    "got": "^10.4.0",
-    "jsdom": "^16.2.2",
-    "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
-    "puppeteer": "^21.5.0",
-    "read-excel-file": "^5.5.3",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6",
-    "xlsx": "^0.18.5"
+    "cheerio": "^1.0.0-rc.12"
   }
 }
